server: add get seed
